<resources>
    <string name="app_name">Practical_1</string>
    <string name="app_title_text">Chat App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="email_text_hint">Email</string>
    <string name="password_text_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="signUp_btn_txt">Sign Up</string>
    <string name="signin_btn_txt">Sign In</string>

</resources>